--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "helmet": "^6.1.5",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
