--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-    "builds": {
-        "env": {
-            "MODE": "dev",
-            "SERVICE_NAME": "fight-camp-server",
-            "MONGO_URL": "mongodb+srv://achmadfauzan1340:NU7hFXumNR6uMYxg@cluster0.ngjhm.mongodb.net/fight-camp?retryWrites=true&w=majority",
-            "SECRET": "qwertyuiop",
-            "AUTH_EMAIL": "achmadfauzan1340@gmail.com",
-            "AUTH_PASSWORD": "emuqwnooutasorcg"
-        },
-        "src": "app.js",
-        "use": "@vercel/node"
-    },
+    "builds": [
+        {
+            "env": {
+                "MODE": "dev",
+                "SERVICE_NAME": "fight-camp-server",
+                "MONGO_URL": "mongodb+srv://achmadfauzan1340:NU7hFXumNR6uMYxg@cluster0.ngjhm.mongodb.net/fight-camp?retryWrites=true&w=majority",
+                "SECRET": "qwertyuiop",
+                "AUTH_EMAIL": "achmadfauzan1340@gmail.com",
+                "AUTH_PASSWORD": "emuqwnooutasorcg"
+            },
+            "src": "app.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
