--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "builds": [
+    "build": 
         {
             "env": {
                 "MODE": "dev",
@@ -12,6 +12,6 @@
             "src": "app.js",
             "use": "@vercel/node"
         }
-    ],
+    ,
     "routes": [{ "src": "/(.*)", "dest": "/app.js" }]
 }
